--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity6"></activity>
+        <activity android:name=".Activity8"></activity>
+        <activity android:name=".Activity7" />
+        <activity android:name=".Activity6" />
         <activity android:name=".Activity5" />
         <activity android:name=".Activity4" />
         <activity android:name=".Activity3" />
