--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity8"></activity>
+        <activity android:name=".ActivityLab05"></activity>
+        <activity android:name=".Activity8" />
         <activity android:name=".Activity7" />
         <activity android:name=".Activity6" />
         <activity android:name=".Activity5" />
